--- a/app/composer.json
+++ b/app/composer.json
@@ -7,6 +7,11 @@
         "php": ">=8.0.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "*",
+        "doctrine/doctrine-migrations-bundle": "*",
+        "doctrine/orm": "*",
+        "lambdish/phunctional": "*",
+        "ramsey/uuid": "*",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
@@ -15,6 +20,11 @@
         "symfony/yaml": "6.0.*"
     },
     "require-dev": {
+        "phpunit/phpunit": "*",
+        "rector/rector": "*",
+        "symfony/browser-kit": "6.0.*",
+        "symfony/css-selector": "6.0.*",
+        "symfony/phpunit-bridge": "*"
     },
     "config": {
         "allow-plugins": {
